<resources>
    <string name="app_name">DownloadFilesWithWorkManager</string>
    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="file">File</string>
    <string name="open_file">Open File</string>
    <string name="download">Download</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="zip">Zip</string>
    <string name="un_zip">Un Zip</string>
</resources>